--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,8 +1,21 @@
+---
+import '@/styles/global.css'
+---
+
 <!doctype html>
 <html lang="es">
   <head>
+    <!-- Global metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="favicon.ico" type="image/x-icon">
+
+    <!-- fonts -->
+    <link rel="stylesheet" href="/fonts/ProductSans-Bold.woff" as="font" type="font/woff" crossorigin />
+    <link rel="stylesheet" href="/fonts/ProductSans-Light.woff" as="font" type="font/woff" crossorigin />
+    <link rel="stylesheet" href="/fonts/ProductSans-Medium.woff" as="font" type="font/woff" crossorigin />
+    <link rel="stylesheet" href="/fonts/ProductSans-Regular.woff" as="font" type="font/woff" crossorigin />
+
     <title>Blog Astro</title>
   </head>
   <body>
