--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,10 +1,9 @@
 ---
 import { getCollection } from "astro:content";
 import MainLayout from "@/layouts/MainLayout.astro";
+import Article from "@/components/Article.astro";
 
 const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
-
-console.log(posts)
 ---
 
 <MainLayout title="Blog">
@@ -13,34 +12,7 @@ console.log(posts)
       <ul class="space-y-8">
         {
           posts.map((post) => (
-            <li class="border-extra-soft-white text-soft-white hover:bg-soft-light rounded-xl border transition-colors duration-200">
-              <div transition:name={post.data.title}>
-                <article>
-                  <a href={`/blog/${post.data.tags}`}>
-                    <img
-                      src={post.data.heroImage}
-                      alt=""
-                      width={1020}
-                      height={520}
-                      class="aspect-[16/5] rounded-t-xl object-cover"
-                    />
-                    <div class="w-full">
-                      <div class="flex flex-col px-12 py-4">
-                        <h4 class="text-3xl font-bold">{post.data.title}</h4>
-                        <div class="flex gap-2">
-                          {post.data.tags.map((tag) => (
-                            <span class="border-extra-soft-white mt-4 self-start rounded border px-2 py-1 text-zinc-400">
-                              {tag}
-                            </span>
-                          ))}
-                        </div>
-                        <p class="mt-6 text-sm text-zinc-400">{post.data.pubDate}</p>
-                      </div>
-                    </div>
-                  </a>
-                </article>
-              </div>
-            </li>
+            <Article {...post.data} />
           ))
         }
       </ul>
