--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
   <BaseHead title={title} />
 
   <body class="bg-dark-blue">
-    <div>
+    <div class="py-10">
       <main>
         <slot />
       </main>
