--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,6 +2,7 @@
 import { type CollectionEntry } from "astro:content";
 import MainLayout from "./MainLayout.astro";
 import FormattedDate from "@/components/FormattedDate.astro";
+import { Image } from "astro:assets";
 type Props = CollectionEntry<"blog">["data"];
 
 const { title, heroImage, pubDate, tags } = Astro.props;
@@ -10,9 +11,11 @@ const { title, heroImage, pubDate, tags } = Astro.props;
 <MainLayout title={title}>
   <div class="text-white">
     <h1 class="text-4xl">{title}</h1>
-    <img src={heroImage} alt={title} class="w-96" />
-    <!-- <p>{body}</p> -->
+    <Image src={heroImage} alt={title} width={700} height={500} />
     <FormattedDate date={pubDate} />
     <span>{tags}</span>
+    <div class="prose prose-invert">
+      <slot />
+    </div>
   </div>
 </MainLayout>
