--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 import '@/styles/global.css';
 
 interface Props {
@@ -21,4 +22,6 @@ const { title } = Astro.props;
   <link rel="stylesheet" href="/fonts/ProductSans-Regular.woff" as="font" type="font/woff" crossorigin />
 
   <title>{title}</title>
+
+  <ViewTransitions />
 </head>
