--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,21 +1,13 @@
 ---
 import { getCollection } from "astro:content";
-import MainLayout from "@/layouts/MainLayout.astro";
 import Article from "@/components/Article.astro";
+import ArticleList from "@/layouts/ArticleList.astro";
 
-const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
+const posts = (await getCollection("blog")).sort(
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+);
 ---
 
-<MainLayout title="Blog">
-  <div class="max-w-article-size mx-auto w-full">
-    <section class="mt-6 w-full">
-      <ul class="space-y-8">
-        {
-          posts.map((post) => (
-            <Article {...post.data} slug={post.slug} />
-          ))
-        }
-      </ul>
-    </section>
-  </div>
-</MainLayout>
+<ArticleList>
+  {posts.map((post) => <Article {...post.data} slug={post.slug} />)}
+</ArticleList>
